Grease Pencil Objects in Edit Mode have transform gizmos in wrong location #58335

Closed
opened 2018-11-30 17:23:28 +01:00 by William Reynish · 11 comments

System Information
Operating system: macOS 10.14.1
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: Blender 2.8 current build (Nov 30 2018)

Short description of error
Grease Pencil Objects in Edit Mode have transform gizmos in wrong location, if said object is not in the center of the world origin. (0,0,0)

Exact steps for others to reproduce the error
Open the blend below. Enter Edit Mode and enable the Move gizmo. If you select anything, you can see the gizmo is not over the selection, but in the world origin.

GP_gizmo_bug.blend

**System Information** Operating system: macOS 10.14.1 Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: Blender 2.8 current build (Nov 30 2018) **Short description of error** Grease Pencil Objects in Edit Mode have transform gizmos in wrong location, if said object is not in the center of the world origin. (0,0,0) **Exact steps for others to reproduce the error** Open the blend below. Enter Edit Mode and enable the Move gizmo. If you select anything, you can see the gizmo is not over the selection, but in the world origin. [GP_gizmo_bug.blend](https://archive.blender.org/developer/F5769696/GP_gizmo_bug.blend)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

#58987 was marked as duplicate of this issue

#58987 was marked as duplicate of this issue
Antonio Vazquez was assigned by William Reynish 2018-11-30 17:23:49 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht Do you have any idea here? I always thought the gizmo used the transformation center.

@brecht Do you have any idea here? I always thought the gizmo used the transformation center.

Added subscriber: @Lenon_Bastos

Added subscriber: @Lenon_Bastos
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Changing the parent test (see P874) seems to fix the problem but I'm not too familiar with the code to confirm if this is right.

Changing the parent test (see [P874](https://archive.blender.org/developer/P874.txt)) seems to fix the problem but I'm not too familiar with the code to confirm if this is right.

This issue was referenced by 5638db7495

This issue was referenced by 5638db749529a77ef4bf8421e1a90eeee6994d5c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 The gizmo is in the right place, but when select a new vertex, the gizmo is not updated... what we need to do to update Gizmo posisition? any depsgraph tag?

@ideasman42 The gizmo is in the right place, but when select a new vertex, the gizmo is not updated... what we need to do to update Gizmo posisition? any depsgraph tag?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58335
No description provided.