Fix T58335: Grease Pencil Objects in Edit Mode have transform gizmos in wrong location

Original fix P874 with changes from @brecht